Imagen, logo, elementos centrados CSS
Se han añadido el logo, la imagen de inicio, corrección de textos, colores en css y un footer genérico

--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -1,5 +1,4 @@
 .bg{
-  background-image: url("https://mdbootstrap.com/img/Mockups/Lightbox/Thumbnail/img%20(67).jpg");
+  background-image: url("https://i.imgur.com/W7M4Dsp.jpeg");
   background-position: center center;
-  
 }
