--- a/Front-End/src/index.css
+++ b/Front-End/src/index.css
@@ -1,8 +1,7 @@
 body{
     background: #020024;
-    background: linear-gradient(to right,#090979,#00d4ff);
+    background: linear-gradient(to right,#a9b2b9,#6c7988);
 }
-
 
 
 /*
@@ -85,8 +84,20 @@ body, html, .App, #root, .auth-wrapper {
 
 
 */
-.navbar-light {
-    background-color: #ffffff;
+.navbar-dark {
+    background-color: #212529;
     box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
-    
+}
+
+.btn-primary {
+  background-color: #212529;
+  outline-color: #3b4249;
+  border-color: #3b4249; 
+}
+
+.btn-primary:hover {
+  background-color: #303e4e;
+  outline-color: #3b4249;
+  border-color: #3b4249;
+  
 }
