Cambio fondo login

--- a/Front-End/src/App.css
+++ b/Front-End/src/App.css
@@ -1,4 +1,4 @@
 .bg{
-  background-image: url("https://i.imgur.com/W7M4Dsp.jpeg");
+  background-image: url("https://i.imgur.com/6KFIM0S.jpg");
   background-position: center center;
 }
